--- a/EducationalSystem.WebAPI/wwwroot/Views/CreateCoursePage.html
+++ b/EducationalSystem.WebAPI/wwwroot/Views/CreateCoursePage.html
@@ -2,7 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Create course</title>
+    <!-- подключаем файлы Bootstrap -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <!-- Bootstrap CSS-->
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
 </head>
 <body>
     <h2>Create new course</h2>
@@ -16,22 +21,27 @@
             <label for="age">Unique code:</label>
             <input class="form-control" name="code" type="number" />
         </div>
+        <div class="form-group col-md-5">
+            <label for="age">Professor:</label>
+            <input class="form-control" name="id" type="number" />
+        </div>
         <div class="panel-body">
-            <button type="submit" id="submit" class="btn btn-primary">Save</button>            
+            <button type="submit" id="submit" class="btn btn-primary">Save</button>
         </div>
     </form>
     <script>
-        async function CreateCourse(courseName, courseCode) {   
-            alert("in function");
+        async function CreateCourse(courseName, courseCode, professorId) {        
             const response = await fetch("api/Courses/AddCourse", {
                 method: "POST",
-                headers: { "Accept": "application/json", "Content-Type": "application/json" },
+                headers: { "Accept": "application/json" },
                 body: JSON.stringify({
                     Name: courseName,
                     UniqueCode: courseCode,
-                    IsActive: true
+                    ProfessorId: professorId
                 })
             });
+            document.write(response.body['errors']);         
+                    
              if (response.ok === true) {
                  alert("course added");
              }
@@ -41,7 +51,8 @@
             const form = document.forms["courseForm"];            
             const name = form.elements["name"].value;
             const code = form.elements["code"].value;                   
-            CreateCourse(name, code);           
+            const professorId = form.elements["id"].value;
+            CreateCourse(name, code, professorId);           
         });
     </script>
 </body>
