--- a/EducationalSystem.WebAPI/wwwroot/Views/CreateCoursePage.html
+++ b/EducationalSystem.WebAPI/wwwroot/Views/CreateCoursePage.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <!-- Bootstrap CSS-->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
     <h2>Create new course</h2>
@@ -15,44 +16,40 @@
         <input type="hidden" name="id" value="0" />
         <div class="form-group col-md-5">
             <label for="name">Name:</label>
-            <input class="form-control" name="name" />
+            <input class="form-control" id="name" />
         </div>
         <div class="form-group col-md-5">
             <label for="age">Unique code:</label>
-            <input class="form-control" name="code" type="number" />
+            <input class="form-control" id="code" type="number" />
         </div>
         <div class="form-group col-md-5">
             <label for="age">Professor:</label>
-            <input class="form-control" name="id" type="number" />
+            <input class="form-control" id="professorId" type="number" />
         </div>
         <div class="panel-body">
             <button type="submit" id="submit" class="btn btn-primary">Save</button>
         </div>
     </form>
-    <script>
-        async function CreateCourse(courseName, courseCode, professorId) {        
-            const response = await fetch("api/Courses/AddCourse", {
+    <script type="text/javascript">
+        async function CreateCourse(courseName, courseCode, professorId) {
+            const response = await fetch("/api/Courses/AddCourse", {
                 method: "POST",
                 headers: { "Accept": "application/json" },
                 body: JSON.stringify({
-                    Name: courseName,
-                    UniqueCode: courseCode,
-                    ProfessorId: professorId
+                    "Name": courseName,
+                    "UniqueCode": courseCode,
+                    "ProfessorId": professorId
                 })
             });
-            document.write(response.body['errors']);         
-                    
-             if (response.ok === true) {
-                 alert("course added");
-             }
-        }        
-        document.forms["courseForm"].addEventListener("submit", e => {
-            e.preventDefault();            
-            const form = document.forms["courseForm"];            
-            const name = form.elements["name"].value;
-            const code = form.elements["code"].value;                   
-            const professorId = form.elements["id"].value;
-            CreateCourse(name, code, professorId);           
+        }
+        $(function () {
+            $("#submit").click(function () {
+                const name = $("#name").val();
+                const code = $("#code").val();
+                const professorId = $("#professorId").val();                
+                CreateCourse(name, code, professorId);
+                alert("New course added");
+            });
         });
     </script>
 </body>
